Add initial support for method contracts via requires and ensures

--- a/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
+++ b/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
@@ -380,6 +380,7 @@
     <Compile Include="Lowering\AsyncRewriter\AsyncRewriter.cs" />
     <Compile Include="Lowering\AsyncRewriter\AsyncStateMachine.cs" />
     <Compile Include="Lowering\AsyncRewriter\AwaitExpressionSpiller.cs" />
+    <Compile Include="Lowering\MethodContractRewriter.cs" />
     <Compile Include="Lowering\DiagnosticsPass_ExpressionTrees.cs" />
     <Compile Include="Lowering\DiagnosticsPass_Warnings.cs" />
     <Compile Include="Lowering\Extensions.cs" />
